incorporé extends mixin y herramientas de SEO

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <!-- Keywords -->
+    <meta name="keywords" content="rope, fotos, imagenes, productos, admiradores, usuarios, moda, canina, correas, collares, estilo de escalada, perros" >
+    <!-- Description -->
+    <meta name="description" content="Disfruta de la galería de fotos de productos rope. Conocé los distintos diseños de collares y correas.">
     <title>Galería</title>
 </head>
 
