--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Keywords -->
+    <meta name="keywords" content="rope, moda, canina, correas, collares, estilo de escalada, perros" >
+    <!-- Description -->
+    <meta name="description" content="rope es un emprendimiento encargado del diseño y fabricación de correas y collares a medida para perros. Todos los productos de confeccionan con cuerdas de escalada deportiva con mucho diseño y personalidad.">
     <title>rope</title>
 </head>
 
