--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <!-- Keywords -->
+    <meta name="keywords" content="rope, contacto, consultas, preguntas, moda, canina, correas, collares, estilo de escalada, perros" >
+    <!-- Description -->
+    <meta name="description" content="Tenes dudas? Dejanos tu consulta y te contactamos a la brevedad.">
     <title>Contacto</title>
 </head>
 
