Ajuste de imagen de banner

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <main class="main">
-        <img src="./img/principal.jpg" alt="Foto de perro con correa rope" class="banner">
+        <img src="./img/principal1.jpg" alt="Foto de perro con correa rope" class="banner">
         <div class="coleccion">
             <h1>Colección rope 2022</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae animi quo eius hic possimus natus
