--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
         </nav>
     </header>
         <main class="main">
-            <img src="../img/contacto.PNG" alt="correas" class="banner">
+            <img src="../img/principal1.jpg" alt="correas" class="banner">
             <h1 class="titulo">Contacto</h1>
             <form action="#" class="form">
                 <input type="text" name="name" id="name" placeholder="  Nombre y apellido" class="form-item">
