--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -57,7 +57,7 @@
         </nav>
     </header>
     <main class="main">
-        <img src="../img/contacto.PNG" alt="correas" class="banner">
+        <img src="../img/principal1.jpg" alt="correas" class="banner">
         <h1 class="titulo">Galería de fotos</h1>
         <div class="galeria">
             <div class="container-grid">
