--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -59,7 +59,7 @@
     </header>
 
     <main class="main">
-        <img src="../img/contacto.PNG" alt="correas" class="banner">
+        <img src="../img/principal1.jpg" alt="correas" class="banner">
         <h1 class="titulo">Nosotros</h1>
         <div class="card">
             <div class="card-top">
