--- a/pages/productos.html
+++ b/pages/productos.html
@@ -57,7 +57,7 @@
         </nav>
     </header>
     <main class="main">
-        <img src="../img/contacto.PNG" alt="correas" class="banner">
+        <img src="../img/principal1.jpg" alt="correas" class="banner">
         <h1 class="titulo">Productos</h1>
         <div class="cards-container">
             <div class="card-prod">
