--- a/pages/talles.html
+++ b/pages/talles.html
@@ -57,7 +57,7 @@
         </nav>
     </header>
     <main class="main">
-        <img src="../img/contacto.PNG" alt="correas" class="banner">
+        <img src="../img/principal1.jpg" alt="correas" class="banner">
         <h1 class="titulo">Talles</h1>
         <div class="form">
             <table>
