--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main class="main">
         <img src="./img/principal1.jpg" alt="Foto de perro con correa rope" class="banner">
         <div class="coleccion">
-            <h1>Colección rope 2022</h1>
+            <h1>Colección rope 2022/23</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae animi quo eius hic possimus natus
                 recusandae, quidem rem reiciendis minus optio, error dicta praesentium facere cum. Adipisci soluta
                 et blanditiis mollitia aperiam est ratione eveniet, veniam nisi suscipit id at libero quasi voluptas
