Ajuste de texto en main index y padding form v3

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <main class="main">
         <img src="./img/principal1.jpg" alt="Foto de perro con correa rope" class="banner">
-        <div class="coleccion">
+        <div class="collection">
             <h1>Colección rope 2022</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae animi quo eius hic possimus natus
                 recusandae, quidem rem reiciendis minus optio, error dicta praesentium facere cum. Adipisci soluta
