--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,15 +60,10 @@
             <h1 class="titulo">Contacto</h1>
             <form action="#" class="form">
                 <input type="text" name="name" id="name" placeholder="  Nombre y apellido" class="form-item">
-                <br><br>
-                <label for="nacimiento" class="form-item">Fecha de nacimiento:</label>
-                <br>
+                <label for="nacimiento">Fecha de nacimiento:</label>
                 <input type="date" name="nacimiento" id="nacimiento" class="form-item">
-                <br><br>
                 <input type="email" name="email" id="email" placeholder="  Mail" class="form-item">
-                <br><br>
                 <textarea name="msj" id="msj" cols="30" rows="10" placeholder="  Mensaje" class="form-item"></textarea>
-                <br><br>
                 <input type="submit" value="Enviar" class="btn">
             </form>
         </main>
