--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
         <img src="./img/principal1.jpg" alt="Foto de perro con correa rope" class="banner">
         <div class="collection">
             <h1>Colección rope 2022</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae animi quo eius hic possimus natus
-                recusandae, quidem rem reiciendis minus optio, error dicta praesentium facere cum. Adipisci soluta
-                et blanditiis mollitia aperiam est ratione eveniet, veniam nisi suscipit id at libero quasi voluptas
-                odit natus alias ab! Nesciunt, explicabo iste?</p>
+            <p>Este año rope te sorprede con una colección exquisita que reúne los mejores aspectos que rodean la estética canina, con una gama amplia de colores frescos que realzarán toda la personalidad e identidad de tu mascota.</p>
         </div>
     </main>
 
