--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -67,19 +67,13 @@
             </div>
             <div class="card-bottom">
                 <h2>Inicios de rope</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eaque corporis dolorem amet
-                    veritatis molestias voluptate velit illo dolore explicabo consequatur mollitia blanditiis facilis
-                    itaque vitae cum veniam deserunt nam enim obcaecati officiis. Cum aut aliquam culpa harum itaque
-                    minima, aperiam voluptate impedit cumque assumenda beatae autem? Ipsa, nisi neque.</p>
+                <p>En 1993 comienza la operación de rope en capital federal, Argentina. Es una empresa familiar dedicada a la industria textil. Toda la compañía mantiene un espíritu 100% proteccionista, que basa su actividad en el amor y compañía incondicional de las mascotas. Toda la esencia de rope se debe a su primera modelo e inspiración de esta compañía, su nombre fue Ritha, una Boyero de Berna que conquisto el afecto de toda nuestra familia. Ejemplo de compañerismo, compañía y amor incondicional que estará por siempre en nuestros recuerdos, anécdotas y corazones.</p>
             </div>
         </div>
         <div class="card">
             <div class="card-bottom">
                 <h2>Producción</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eaque corporis dolorem amet
-                    veritatis molestias voluptate velit illo dolore explicabo consequatur mollitia blanditiis facilis
-                    itaque vitae cum veniam deserunt nam enim obcaecati officiis. Cum aut aliquam culpa harum itaque
-                    minima, aperiam voluptate impedit cumque assumenda beatae autem? Ipsa, nisi neque.</p>
+                <p>El proceso de producción que ocupamos tuvo orígenes 100% artesanales desde la confección de las cuerdas hasta el armado de las correas. A lo largo de los años el proceso atravesó muchos cambios y hoy en día contamos con un taller de construcción de cuerdas con máquinas de trenzado y trozado de cuerdas, las cuales aportan resistencia y acabado profesional a la confección. Contamos con una amplia gama de colores que nos permiten inundar de originalidad y personalidad todos nuestros diseños.</p>
             </div>
             <div class="card-top">
                 <img src="../img/varias1.jpg" alt="imagen de rope">
